[tool.poetry]
name = "ai-engineer"
version = "0.1.0"
description = "poetry introduction"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.1"
matplotlib = "3.5.1"
jupyterlab = "3.3.2"
scikit-learn = "1.0.2"
transformers = "4.17.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
mglearn = "^0.1.9"
mlxtend = "^0.19.0"
seaborn = "^0.11.2"
graphviz = "^0.19.1"
pandas-profiling = "^3.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
